--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Version 4.5 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"><script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <!-- Version 5 -->
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous"> -->
+    <!-- <link rel="stylesheet" href="h`ttps://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous"> -->
 
     <!-- Style css -->
     <link rel="stylesheet" href="port.css">
@@ -25,19 +25,25 @@
   <body>
     <div class="overlay">
         <div class="mainbox">
-            <img class="img1" src="src\svgs\verticalLongLines.svg" style="float: left;" alt="">
-            <img class="img1" src="src\svgs\verticalLongLines.svg" style="margin-left: 20%;" alt="">
-            <img class="img1" src="src\svgs\verticalLongLines.svg" style="margin-left: 40%;" alt="">
-            <img class="img1" src="src\svgs\verticalLongLines.svg" style="margin-left: 60%;" alt="">
-            <img class="img1" src="src\svgs\verticalLongLines.svg" style="margin-left: 80%;" alt="">
-            <img class="img1" src="src\svgs\verticalLongLines.svg" style="margin-left: 100%;" alt="">
+            <img class="img1" src="svgs\verticalLongLines.svg" style="float: left;" alt="">
+            <img class="img1" src="svgs\verticalLongLines.svg" style="margin-left: 20%;" alt="">
+            <img class="img1" src="svgs\verticalLongLines.svg" style="margin-left: 40%;" alt="">
+            <img class="img1" src="svgs\verticalLongLines.svg" style="margin-left: 60%;" alt="">
+            <img class="img1" src="svgs\verticalLongLines.svg" style="margin-left: 80%;" alt="">
+            <img class="img1" src="svgs\verticalLongLines.svg" style="margin-left: 100%;" alt="">
             
-            <div class="top">
+            <div class="top pb-5">
                 <div class="menu mt-5">
-                    <i class="menubar fas fa-bars fa-3x"></i>
+                    <i class="menubar fas fa-bars fa-2x"></i>
+                    <div class="socials">
+                        <i class="fab fa-twitter fa-2x mr-5"></i>
+                        <i class="fab fa-facebook-f fa-2x mr-5"></i>
+                        <i class="fab fa-instagram fa-2x" ></i>
+                    </div>
                 </div>
                 <div class="hello mt-5">
-                    <i class="fas fa-grip-lines-vertical fa-2x"></i>
+                    <!-- <i class="fas fa-grip-lines-vertical fa-2x"></i> -->
+                    <img src="svgs/verticalLine.svg" alt="">
                     <p class="mt-1 ml-3">HELLO, MY NAME IS</p>
                 </div>
                 <div class="name mt-2">
@@ -46,7 +52,7 @@
             </div>
             <div class="bottom py-5">
                 <div class="row1">
-                    <div class="col1 mt-4">
+                    <div class="col1">
                     </div>
                     <div class="col2">
 
@@ -55,8 +61,9 @@
                         <div class="col3top">
                             <div>
                                 <div class="hello">
-                                    <i class="fas fa-grip-lines-vertical fa-2x"></i>
-                                    <p class="mt-1 ml-3" style="font-weight: 500;">WHAT I DO</p>
+                                    <!-- <i class="fas fa-grip-lines-vertical fa-2x"></i> -->
+                                    <img src="svgs/verticalLine.svg" alt="">
+                                    <p class="mt-3 ml-3" style="font-weight: 500;">WHAT I DO</p>
                                 </div>
                                 <div>
                                     <p class="whitefont pt-1" style="font-weight: 400;">Above all else, I am a UI/UX Designer!</p>
@@ -70,10 +77,10 @@
                             </div>
                             <div class="music">
                                 <div class="waves">
-                                    <img src="src/svgs/music.svg" width="90%" alt="">
+                                    <img src="svgs/music.svg" width="90%" alt="">
                                 </div>
                                 <div class="play">
-                                    <img src="src/svgs/playButton.svg" alt="">
+                                    <img src="svgs/playButton.svg" alt="">
                                 </div>
                             </div>
                         </div>
@@ -87,7 +94,7 @@
                         <p class="mt-3 whitefont">I enjoy designing beautiful mock-ups</p>
                     </div>
                     <div class="col2">
-                        <img class="img2" src="src/svgs/picture2.svg" alt="">
+                        <img class="img2" src="svgs/picture2.svg" alt="">
                         <p class="mt-3 whitefont">I take care of my body cause it's a temple</p>
                     </div>
                     <div class="col3">
